init service user service and config

--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>guava</artifactId>
             <version>30.1.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>id.dicka.app</groupId>
+            <artifactId>configuration-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
